--- a/air-quality-app-batch/Dockerfile-dev
+++ b/air-quality-app-batch/Dockerfile-dev
@@ -5,12 +5,12 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # 컨테이너 내부의 /app 디렉토리에 jar 파일 복사
-ARG JAR_FILE=community-app-external-api/build/libs/community-app-external-api-0.0.1-SNAPSHOT.jar
-ARG CONTAINER_JAR_FILE=community-app-external-api.jar
+ARG JAR_FILE=air-quality-app-batch/build/libs/air-quality-app-batch-0.0.1-SNAPSHOT.jar
+ARG CONTAINER_JAR_FILE=air-quality-app-batch.jar
 COPY ${JAR_FILE} ${CONTAINER_JAR_FILE}
 
 # Spring Boot를 실행하기 위한 entry point 지정
-ENTRYPOINT ["java", "-jar", "/app/community-app-external-api.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=hyyena", "-jar", "/app/air-quality-app-batch.jar"]
 
 # 시간 설정
 ENV TZ=Asia/Seoul
